# aeon-voice

./: .gitignore  CMakeLists.txt  README.md  SConstruct
cmake/: FindSonic.cmake  Hardening.cmake  VersionFromGit.cmake  clangLinkerWorkaround.sh
config/: AeonVoice.conf  CMakeLists.txt  SConscript
data/: CMakeLists.txt  SConscript
data/languages/: CMakeLists.txt
data/languages/English/: emoji.fst  language.info  vocab.fst
data/languages/Russian/: emoji.fst  language.info
data/languages/Spanish/: currency.fst  downcase.fst  dur-mod.dt  emoji.fst  enwords.fst  g2p.fst  gpos.fst  graph.txt  key.fst  language.info  lseq.fst  msg.fst  norm.fst  numbers.fst  pg2p.fst  phonemes.xml  pitch-mod.dt  qst.fst  readme.md  spell.fst  syl.fst  tok.fst
data/languages/Spanish/userdict/src/: dict.txt
data/voices/: CMakeLists.txt
data/voices/Mateo/: .gitignore  readme.md  rmcspeech_usage_notes.docx  voice.info  voice.params
data/voices/Mateo/16000/: voice.data
data/voices/Mateo/24000/: lf0.patch  voice.data
data/voices/aleksandr-hq/: README.md  Readme-en.txt  Readme-ru.txt  voice.info
data/voices/aleksandr-hq/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/aleksandr-hq/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/anatol/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/anatol/24000/: tree-bap.inf  tree-lf0.inf  tree-mgc.inf
data/voices/artemiy/: README.md
data/voices/dilnavoz/: README.md  voice.info  voice.params
data/voices/dilnavoz/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/dilnavoz/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/islom/: README.md  voice.info  voice.params
data/voices/islom/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/islom/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/jasietka/: attrib.html  voice.info
data/voices/ksp/: README.md  voice.info
data/voices/ksp/16000/: voice.data
data/voices/ksp/24000/: voice.data
data/voices/mikhail/: README.md  Readme-en.txt  Readme-ru.txt  voice.info
data/voices/mikhail/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/mikhail/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/natalia/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/natalia/24000/: tree-bap.inf  tree-lf0.inf  voice.data
data/voices/ondro/: attrib.html  voice.info  voice.params
data/voices/ondro/16000/: voice.data
data/voices/pavel/: README.md
data/voices/radek/: README.md  attrib.html  voice.info  voice.params
data/voices/radek/16000/: voice.data
data/voices/seva/: README.md  Readme-en.txt  Readme-ru.txt  voice.info
data/voices/sevinch/: README.md  voice.info  voice.params
data/voices/sevinch/16000/: voice.data
data/voices/sevinch/24000/: eq.txt  voice.data
data/voices/spomenka/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/spomenka/24000/: tree-bap.inf  tree-lf0.inf  voice.data
data/voices/suze/: README.md  voice.info  voice.params
data/voices/timofey/: README.md  Readme-en.txt  Readme-ru.txt  voice.info  voice.params
data/voices/timofey/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/timofey/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/victoria/: README.md  Readme-en.txt  Readme-ru.txt  voice.info  voice.params
data/voices/victoria/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/victoria/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/vitaliy/: README.md  Readme-en.txt  Readme-ru.txt  voice.info
data/voices/vitaliy-ng/: README.md  Readme-en.txt  Readme-ru.txt  voice.info  voice.params
data/voices/vitaliy-ng/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/vitaliy-ng/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/vitaliy/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/vitaliy/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/vsevolod/: README.md  Readme-en.txt  Readme-ru.txt  attrib.html  voice.info  voice.params
data/voices/vsevolod/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/vsevolod/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf  voice.data
data/voices/yuriy/: README.md  Readme-en.txt  Readme-ru.txt  voice.info
data/voices/yuriy/16000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/yuriy/24000/: tree-bap.inf  tree-dur.inf  tree-lf0.inf  tree-mgc.inf
data/voices/zdenek/: README.md  attrib.html  voice.info
doc/: Compilation.md  Compile-Install.md  Configuration.md
src/: CMakeLists.txt
src/test/: CMakeLists.txt  SConscript  test.cpp
(+31 files in other folders)
